<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_nav_bg"
    android:duplicateParentState="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="40dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/vector_nav_profile" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_name"
                android:textColor="@color/color_default_text"
                android:textStyle="bold" />

            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/vector_right_arrow" />
        </LinearLayout>


        <View
            android:id="@+id/scan_code"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/vector_scan_qr_code" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--开通会员-->
            <RelativeLayout
                android:id="@+id/nav_vip"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/shape_nav_vip_bg"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_name"
                    android:textColor="#f8dbdd"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/sub_vip_name"
                    android:textColor="#958a88"
                    android:textSize="12sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.3dp"
                    android:layout_marginTop="60dp"
                    android:background="#958a88" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:text="@string/vip_content"
                    android:textColor="#958a88"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/shape_nav_vip_but_bg"
                    android:text="@string/vip_but_text"
                    android:textColor="#f8dbdd"
                    android:textSize="11sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RelativeLayout>

            <!--消息、云贝-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_menu_bg"
                android:orientation="vertical">

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_email"
                    app:menu_msg_num="3"
                    app:menu_name="我的消息" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_cloud_bei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_cloud"
                    app:menu_name="云贝中心" />
            </LinearLayout>

            <!--音乐服务-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_menu_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="音乐服务"
                    android:textColor="@color/color_sub_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_menu_line_long_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_headset"
                    app:menu_name="云村有票" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_empty_sack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_share"
                    app:menu_name="多多西西空袋" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_mall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_mall"
                    app:menu_name="商场"
                    app:menu_sub_name="耳机9元抢" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_beat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_beat"
                    app:menu_name="Beat专区"
                    app:menu_sub_name="投票选出最强Beat!" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_ringtone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_bang"
                    app:menu_name="空袋彩铃" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_game"
                    app:menu_name="游戏专区"
                    app:menu_sub_name="吸引可爱的肥鹅来健身" />
            </LinearLayout>

            <!--其他-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_menu_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="其他"
                    android:textColor="@color/color_sub_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_menu_line_long_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_setting"
                    app:menu_name="设置" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />


                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_dark_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_moon"
                    app:menu_name="深色模式"
                    app:menu_id="@id/menu_dark_model"
                    app:menu_switch="0" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_timing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_timing"
                    app:menu_name="定时关闭" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_theme"
                    app:menu_name="个性装扮" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_download"
                    app:menu_name="边听边存" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_free_traffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_radio"
                    app:menu_name="在线听歌免流量" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_ring_bell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_safety"
                    app:menu_name="音乐响钟" />
            </LinearLayout>

            <!--订单、优惠券-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_menu_bg"
                android:orientation="vertical">

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_order"
                    app:menu_name="我的订单" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_coupon"
                    app:menu_name="优惠券" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_service"
                    app:menu_name="我的客服" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_share"
                    app:menu_name="分享网易云音乐" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/color_menu_line_bg" />

                <io.music.app.view.NavMenuLinearLayout
                    android:id="@+id/menu_bang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menu_icon="@drawable/vector_bang"
                    app:menu_name="关于" />
            </LinearLayout>

            <!--退出按钮-->
            <Button
                android:id="@+id/close_app_but"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ripple_bg"
                android:text="@string/nav_close_but"
                android:textColor="@color/color_close_text" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>